# school_8th_help_version3_main2

./: LICENSE  README.md  buildozer.spec  main.spec  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml  buildozer.spec  main.spec
codes/: adasi.py  aine.py  arayesh.py  atom.py  chem.py  col.py  conv.py  elec.py  fisa.py  fizik.py  jazr.py  main.py  masraf.py  motegate.py  movazene.py  mv.py  nogte_i.py  ohm.py  riazi.py  shedat.py  tavan.py
src/school/: __main__.py
src/school/codes/: adasi.py  aine.py  arayesh.py  atom.py  chem.py  col.py  conv.py  elec.py  fisa.py  fizik.py  jazr.py  main.py  masraf.py  motegate.py  movazene.py  mv.py  nogte_i.py  ohm.py  riazi.py  shedat.py  tavan.py
