[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "school"
version = "0.1.0"
description = "An amazing educational app for 8th graders"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Fatemeh Heydarian", email = "heydarianfatemeh9014@gmail.com"}
]
license = { file = "LICENSE" }
keywords = ["education", "school", "8th grade", "learning"]

[tool.briefcase]
version = "0.3.25"
bundle = "com.fatemeh"
project_name = "school"

[tool.briefcase.app.school]
formal_name = "School App"
description = "An amazing educational app for 8th graders"
author = "Fatemeh Heydarian"
author_email = "heydarianfatemeh9014@gmail.com"
license.file = "LICENSE"
url = "https://github.com/heydarianfatemeh9014/school_8th_help_version3_main2"
sources = ["codes"]
icon = "imagess/icon.png"

[tool.briefcase.app.school.android]
package = "com.fatemeh.school"
version = "0.1.0"
requirements = [
  "python3",
  "tkinter",
  "Pillow",
  "tensorflow==2.17.0",
  "tf_keras==2.17.0",
  "torch==2.6.0",
  "transformers==4.48.0",
  "scikit-learn==1.6.1",
  "scipy==1.14.1",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "matplotlib==3.9.2",
  "spacy==3.8.3",
  "sswg==2.3.0",
  "Django==5.1.4",
  "Flask==3.0.3",
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "gunicorn==23.0.0",
  "auto-py-to-exe==2.45.1",
  "briefcase==0.3.25",
  "buildozer==1.5.0",
  "customtkinter==5.2.2",
  "cx_Freeze==7.2.8",
  "PyInstaller==6.11.1",
  "pygame==2.6.0",
  "kivy==2.3.0",
  "opencv-python==4.10.0.84",
  "pillow==10.4.0",
  "SpeechRecognition==3.10.4",
  "gTTS==2.5.3",
  "mtcnn==0.1.1",
  "deepface==0.0.93",
  "retina-face==0.0.17",
  "requests==2.32.3",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "psutil==7.0.0",
  "schedule==1.2.2",
  "regex==2024.9.11",
  "tqdm==4.66.5",
  "setuptools>=65.5.0",
  "wheel"
]
sdk_min = 21
sdk_target = 33
orientation = "portrait"
