[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "school"
version = "0.1.0"
description = "An amazing educational app for 8th graders"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Fatemeh Heydarian", email = "heydarianfatemeh9014@gmail.com"}
]
license = { file = "LICENSE" }
keywords = ["education", "school", "8th grade", "learning"]

[tool.briefcase]
version = "0.3.25"
bundle = "com.fatemeh"
project_name = "school"

[tool.briefcase.app.school]
formal_name = "School App"
description = "An amazing educational app for 8th graders"
author = "Fatemeh Heydarian"
author_email = "heydarianfatemeh9014@gmail.com"
license.file = "LICENSE"
url = "https://github.com/heydarianfatemeh9014/school_8th_help_version3_main2"
sources = ["src/school"]
icon = "imagess/icon.png"

[tool.briefcase.app.school.android]
package = "com.fatemeh.school"
version = "0.1.0"
requirements = [
  "kivy==2.3.0",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "matplotlib==3.9.2",
  "requests==2.32.3",
  "pillow==10.4.0"
]
sdk_min = 21
sdk_target = 33
orientation = "portrait"
